test/good/lambdas/placeholder01.px

func call(f: Bool->Int->String->Int): Int def
    return f(true, 7, "")

print call(lambda _, y, _: y)
