test/bad/functions/lambda02.px

func f(String->Int->String g) String def
    return g("abc", 2)

f(lambda x, y: x - y)
